# substrate-pallet-multi-account

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: script.sh
src/: lib.rs
