[package]
name = "substrate-pallet-multi-account"
description = "A pallet/runtime module for Substrate with multisig functionality with a static `AccountId` and a dynamic `threshold` and set of `signatories`."
version = "2.0.0-rc6"
authors = ["Philip Stanislaus <6912756+philipstanislaus@users.noreply.github.com>"]
edition = "2018"
license = "LGPL-3.0"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/substrate-pallet-multi-account/"

[dependencies]
serde = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
frame-system = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
sp-core = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
sp-runtime = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
sp-io = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }

[dev-dependencies]
sp-core = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }
pallet-balances = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "dfa6998ad31f1430a54ef1bce2722a7cf2795cff" }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
